--- a/TextileApp/public/css/style.css
+++ b/TextileApp/public/css/style.css
@@ -31,7 +31,12 @@
         margin-top: 5%;
         margin-bottom: 2%;
     }
-    #edit{
+    #tcedit{
+        width:40px;
+        height:40px;
+        float:left;
+    }
+     #tcdelete{
         width:40px;
         height:40px;
         float:left;
@@ -103,8 +108,6 @@
         height: 60px;
         float:left; 
     }
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     /*viewpf_target*/
 
@@ -431,7 +434,28 @@ h4{
 .sidenav a:hover {
     color: #b30000;
 }
-
+/*training centre form*/
+  .star{
+    color:red;
+    text-align: center;
+    font-size: 20px;
+   padding-top: 174%;
+   padding-bottom: -30%;
+  }
+  .star1{
+    padding-top: 350%;
+    padding-bottom: -30%;
+    color:red;
+    text-align: center;
+    font-size: 20px;
+  }
+  .dd{
+    padding-left: 70%;
+  }
+  #trainingcentreformcontainer{
+  margin-top: 5%;
+        margin-bottom: 2%;
+  }
 
 
 
