--- a/TextileApp/public/css/style.css
+++ b/TextileApp/public/css/style.css
@@ -41,7 +41,11 @@
         height:40px;
         float:left;
     }
-
+/*edit Tc*/
+#edittccontainer{
+        margin-top: 5%;
+        margin-bottom: 2%;
+    }
 /*batch_create*/
 
     .lbl{
